# esp_lcd_ili9488

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  esp_lcd_ili9488.c  idf_component.yml
.github/workflows/: component_upload.yml
examples/lvgl/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/lvgl/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
examples/lvgl_for_i8080/: CMakeLists.txt  README.md  sdkconfig.old
examples/lvgl_for_i8080/main/: idf_component.yml  lvgl_example_main.c
include/: esp_lcd_ili9488.h
